Makes sure "Log out" and "Save" buttons are always visible.

--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -386,11 +386,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Az8-7r-maZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="0IC-rP-egG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="751"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nnf-vS-oz5">
-                                <rect key="frame" x="0.0" y="20" width="320" height="750"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="731"/>
                                 <subviews>
                                     <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ar4-1H-MYM">
                                         <rect key="frame" x="110" y="8" width="100" height="100"/>
@@ -486,9 +486,9 @@
                                         <edgeInsets key="layoutMargins" top="0.0" left="8" bottom="0.0" right="8"/>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cSa-YS-UWc" customClass="CSSecondary" customModule="CleanerSeeker" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="601" width="65" height="30"/>
+                                        <rect key="frame" x="20" y="601" width="75" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="65" id="PUb-jQ-05n"/>
+                                            <constraint firstAttribute="width" constant="75" id="PUb-jQ-05n"/>
                                             <constraint firstAttribute="height" constant="30" id="yeC-0n-vmO"/>
                                         </constraints>
                                         <state key="normal" title="Log out">
@@ -499,10 +499,10 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzE-Im-NaN" customClass="CSPrimary" customModule="CleanerSeeker" customModuleProvider="target">
-                                        <rect key="frame" x="247" y="601" width="45" height="30"/>
+                                        <rect key="frame" x="232" y="601" width="60" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="DAk-xp-IZW"/>
-                                            <constraint firstAttribute="width" constant="45" id="QWx-ND-m89"/>
+                                            <constraint firstAttribute="width" constant="60" id="QWx-ND-m89"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <state key="normal" title="Save"/>
@@ -519,7 +519,7 @@
                                     <constraint firstItem="tzE-Im-NaN" firstAttribute="centerY" secondItem="cSa-YS-UWc" secondAttribute="centerY" id="Lii-lk-qPi"/>
                                     <constraint firstItem="Mq0-r1-9zg" firstAttribute="width" secondItem="Nnf-vS-oz5" secondAttribute="width" id="TzU-8a-V7t"/>
                                     <constraint firstItem="Mq0-r1-9zg" firstAttribute="leading" secondItem="Nnf-vS-oz5" secondAttribute="leading" id="Y7E-hw-eo0"/>
-                                    <constraint firstItem="tzE-Im-NaN" firstAttribute="bottom" secondItem="Nnf-vS-oz5" secondAttribute="bottomMargin" constant="8" id="l6w-Ep-8zH"/>
+                                    <constraint firstItem="tzE-Im-NaN" firstAttribute="bottom" secondItem="Nnf-vS-oz5" secondAttribute="bottomMargin" id="l6w-Ep-8zH"/>
                                     <constraint firstItem="cSa-YS-UWc" firstAttribute="top" secondItem="Mq0-r1-9zg" secondAttribute="bottom" constant="20" id="nUf-tX-lpy"/>
                                     <constraint firstItem="Mq0-r1-9zg" firstAttribute="top" secondItem="Ar4-1H-MYM" secondAttribute="bottom" constant="25" id="nUg-IR-PXB"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="tzE-Im-NaN" secondAttribute="trailing" constant="20" id="y1X-pR-92a"/>
@@ -530,10 +530,11 @@
                         <constraints>
                             <constraint firstItem="Nnf-vS-oz5" firstAttribute="centerX" secondItem="0IC-rP-egG" secondAttribute="centerX" id="HPr-X6-RbV"/>
                             <constraint firstItem="Nnf-vS-oz5" firstAttribute="width" secondItem="0IC-rP-egG" secondAttribute="width" id="i2W-Zz-9eO"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="Nnf-vS-oz5" secondAttribute="bottom" constant="30" id="s8u-MK-OsP"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Nnf-vS-oz5" secondAttribute="bottom" id="s8u-MK-OsP"/>
                             <constraint firstItem="Nnf-vS-oz5" firstAttribute="top" secondItem="1Oa-7o-ebd" secondAttribute="bottom" id="wyX-ng-99E"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <tabBarItem key="tabBarItem" title="Profile" image="profile-male" selectedImage="profile-male-selected" id="ld9-PV-mE8"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="800"/>
@@ -1145,7 +1146,7 @@
         <image name="profile-male-selected" width="28" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="RII-dt-dA0"/>
         <segue reference="j2P-27-eQ5"/>
-        <segue reference="r4a-jc-dzk"/>
     </inferredMetricsTieBreakers>
 </document>
