--- a/CleanerSeeker/CleanerSeeker/JobSummaryView.xib
+++ b/CleanerSeeker/CleanerSeeker/JobSummaryView.xib
@@ -1,17 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="JobSummaryVC" customModule="CleanerSeeker" customModuleProvider="target">
             <connections>
                 <outlet property="addresslabel" destination="W07-JM-Gvz" id="UV5-Bc-M7Z"/>
+                <outlet property="baseView" destination="EfA-UE-kVK" id="0vM-oN-VOv"/>
                 <outlet property="bedsLabel" destination="qZi-Vn-ivB" id="LDp-J8-FlQ"/>
                 <outlet property="dateLabel" destination="do9-hP-y5k" id="2vv-mF-EP2"/>
                 <outlet property="hoursToWorkLabel" destination="0yr-Sz-p00" id="s0n-4w-QOO"/>
@@ -34,7 +35,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2u-Oa-h42" userLabel="Top View">
                             <rect key="frame" x="0.0" y="0.0" width="300" height="180"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address test with big text, so I will be able to see problems, or not M5N 1A3 " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W07-JM-Gvz">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address test with big text, so I will be able to see problems, or not M5N 1A3 " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="W07-JM-Gvz">
                                     <rect key="frame" x="8" y="8" width="284" height="80"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="80" id="d6Q-FE-pvB"/>
