--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="juE-Bi-44C">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="juE-Bi-44C">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -625,9 +625,21 @@
                                     <constraint firstAttribute="height" constant="35" id="1gM-kQ-sZi"/>
                                 </constraints>
                             </stackView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No jobs opportunities on your range 😕" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uni-JG-eGM">
+                                <rect key="frame" x="70" y="237" width="180" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="LPS-Vh-0J8"/>
+                                    <constraint firstAttribute="width" constant="180" id="SKy-Cd-cAf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="uni-JG-eGM" firstAttribute="centerY" secondItem="yOF-LE-Omc" secondAttribute="centerY" id="3il-HM-vv5"/>
+                            <constraint firstItem="uni-JG-eGM" firstAttribute="centerX" secondItem="yOF-LE-Omc" secondAttribute="centerX" id="77D-Te-XG1"/>
                             <constraint firstItem="QID-C3-Vol" firstAttribute="top" secondItem="jHz-5F-BAw" secondAttribute="bottom" constant="15" id="SgB-mV-DAh"/>
                             <constraint firstItem="eDP-84-Qc2" firstAttribute="centerX" secondItem="yOF-LE-Omc" secondAttribute="centerX" id="lMj-2E-t9I"/>
                             <constraint firstItem="QID-C3-Vol" firstAttribute="leading" secondItem="yOF-LE-Omc" secondAttribute="leadingMargin" id="sis-ut-V9I"/>
@@ -639,13 +651,15 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="YTo-qZ-brN"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="buttonsStack" destination="eDP-84-Qc2" id="yEz-67-240"/>
                         <outlet property="kolodaView" destination="QID-C3-Vol" id="iL9-kU-FoT"/>
+                        <outlet property="noJobsLabel" destination="uni-JG-eGM" id="kOc-b7-Jtj"/>
                         <segue destination="W6z-us-v9D" kind="show" identifier="jobDetails" id="dl5-0Q-HUN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oGP-Aq-FZR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1943" y="823"/>
+            <point key="canvasLocation" x="1942.5" y="822.88732394366195"/>
         </scene>
         <!--Job Details-->
         <scene sceneID="vXa-8H-95w">
